# 1C-screening-task

./: .clang-tidy  README.md  meson.build  meson_options.txt
docs/: annotated.html  annotated_dup.js  classdata__structure_1_1trie.html  classdata__structure_1_1trie.js  classdata__structure_1_1trie_1_1iterator.html  classdata__structure_1_1trie_1_1iterator.js  classdata__structure_1_1trie_1_1iterator_a4a276193b3509b27966cb0f334f41197_cgraph.map  classdata__structure_1_1trie_1_1iterator_a4a276193b3509b27966cb0f334f41197_cgraph.md5  classdata__structure_1_1trie_1_1iterator_a67d652c2433cf9217ed2a1485092fdd1_icgraph.map  classdata__structure_1_1trie_1_1iterator_a67d652c2433cf9217ed2a1485092fdd1_icgraph.md5  classdata__structure_1_1trie_a386e4fa47c5cea700c8cd00a09b23415_icgraph.map  classdata__structure_1_1trie_a386e4fa47c5cea700c8cd00a09b23415_icgraph.md5  classdata__structure_1_1trie_a4cbd3e340fa4029d8ec49782b50b2fe5_icgraph.map  classdata__structure_1_1trie_a4cbd3e340fa4029d8ec49782b50b2fe5_icgraph.md5  classdata__structure_1_1trie_a99ca06e115ffa79b2b2d62b71451a74c_icgraph.map  classdata__structure_1_1trie_a99ca06e115ffa79b2b2d62b71451a74c_icgraph.md5  classdata__structure_1_1trie_ac112f02f31e1b41dee827a4a66740ba4_icgraph.map  classdata__structure_1_1trie_ac112f02f31e1b41dee827a4a66740ba4_icgraph.md5  classdata__structure_1_1trie_ac8bb3912a3ce86b15842e79d0b421204_icgraph.map  classdata__structure_1_1trie_ac8bb3912a3ce86b15842e79d0b421204_icgraph.md5  classes.html  classsolver_1_1completor.html  classsolver_1_1completor.js  completor_8cpp.html  completor_8cpp__incl.map  (+52 more)
(+40 files in other folders)
